--- a/src/test/resources/config/stage.properties
+++ b/src/test/resources/config/stage.properties
@@ -1,13 +1,12 @@
-# Stage Environment
-baseUrl=http://127.0.0.1:4723
+#baseUrl=http://host.docker.internal:4723/wd/hub
+baseUrl=http://127.0.0.1:4723/wd/hub
+appPath=apps/MyDemoApp-dev.apk
+#appPath=http://host.docker.internal:8000/apps/MyDemoApp-dev.apk
+
 deviceName=emulator-5554
 waitTimeout=10
 
-# App Info
-appPath=C:\\Users\\bui.lan\\Downloads\\Android.SauceLabs.Mobile.Sample.app.2.7.1.apk
-packageName=com.swaglabsmobileapp
-activityName=com.swaglabsmobileapp.MainActivity
-
-# Credentials
+udid=emulator-5554
+adbExecTimeoutMs=60000
 username=standard_user
 password=secret_sauce
